src/generated/SenseParser.js
// Generated from Sense.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import SenseListener from './SenseListener.js';
import SenseVisitor from './SenseVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class SenseParser extends antlr4.Parser {

    static grammarFileName = "Sense.g4";
    static literalNames = [ null, "'namespace'", "';'", "'import'", "'::'", 
                            "','", "':'", "'<'", "'>'", "'('", "')'", "'!'", 
                            "'@'", "'='", "'['", "']'", "'&'", "'|'", "'*'", 
                            "'{'", "'}'", "'^'", "'=='", "'!='", "'<*'", 
                            "'.'", "'${'", "'~'", "'+'", "'?'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "INT", 
                             "FLOAT", "BOOLEAN", "STRING", "FUNCTION", "ID", 
                             "ID_PATH", "MACROARG", "NAMESPACE", "LINECOMMENT", 
                             "BLOCKCOMMENT", "SPACES", "SCRIPT", "REGEX" ];
    static ruleNames = [ "sense", "nsSentence", "importSentence", "scriptSentence", 
                         "primeSentence", "macroSentence", "productionSentence", 
                         "exclusion", "annotation", "assigns", "assign", 
                         "criteria", "catExpr", "catUnit", "catBranch", 
                         "cat", "wordAttrExpr", "wordAttrBranch", "wordAttr", 
                         "wordAttrUnit", "value", "array", "dict", "dictItem", 
                         "expr", "unit", "idList", "qualifiedName", "namespace", 
                         "rep", "repUnit", "branch" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SenseParser.ruleNames;
        this.literalNames = SenseParser.literalNames;
        this.symbolicNames = SenseParser.symbolicNames;
    }



	sense() {
	    let localctx = new SenseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SenseParser.RULE_sense);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 64;
	        this.nsSentence();
	        this.state = 68;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 65;
	            this.importSentence();
	            this.state = 70;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 402653217) !== 0)) {
	            this.state = 75;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 71;
	                this.scriptSentence();
	                break;

	            case 2:
	                this.state = 72;
	                this.primeSentence();
	                break;

	            case 3:
	                this.state = 73;
	                this.macroSentence();
	                break;

	            case 4:
	                this.state = 74;
	                this.productionSentence();
	                break;

	            }
	            this.state = 79;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 80;
	        this.match(SenseParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nsSentence() {
	    let localctx = new NsSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SenseParser.RULE_nsSentence);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(SenseParser.T__0);
	        this.state = 83;
	        this.namespace();
	        this.state = 84;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importSentence() {
	    let localctx = new ImportSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SenseParser.RULE_importSentence);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(SenseParser.T__2);

	        this.state = 87;
	        this.namespace();
	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 88;
	            this.match(SenseParser.T__3);
	            this.state = 89;
	            this.match(SenseParser.ID);
	            this.state = 94;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===5) {
	                this.state = 90;
	                this.match(SenseParser.T__4);
	                this.state = 91;
	                this.match(SenseParser.ID);
	                this.state = 96;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 99;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scriptSentence() {
	    let localctx = new ScriptSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SenseParser.RULE_scriptSentence);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(SenseParser.FUNCTION);
	        this.state = 102;
	        this.match(SenseParser.T__5);
	        this.state = 103;
	        this.match(SenseParser.SCRIPT);
	        this.state = 104;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primeSentence() {
	    let localctx = new PrimeSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SenseParser.RULE_primeSentence);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 106;
	                this.annotation(); 
	            }
	            this.state = 111;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 112;
	            this.criteria();
	        }

	        this.state = 115;
	        this.match(SenseParser.T__6);
	        this.state = 116;
	        localctx.name = this.match(SenseParser.ID);
	        this.state = 117;
	        this.match(SenseParser.T__7);
	        this.state = 118;
	        this.match(SenseParser.T__5);
	        this.state = 119;
	        this.expr();
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===11) {
	            this.state = 120;
	            this.exclusion();
	        }

	        this.state = 123;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	macroSentence() {
	    let localctx = new MacroSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SenseParser.RULE_macroSentence);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 125;
	            this.annotation();
	            this.state = 130;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 131;
	        localctx.name = this.match(SenseParser.ID);
	        this.state = 132;
	        this.match(SenseParser.T__8);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 133;
	            this.idList();
	        }

	        this.state = 136;
	        this.match(SenseParser.T__9);
	        this.state = 137;
	        this.match(SenseParser.T__5);
	        this.state = 138;
	        this.expr();
	        this.state = 139;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	productionSentence() {
	    let localctx = new ProductionSentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SenseParser.RULE_productionSentence);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 141;
	            this.annotation();
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 147;
	        localctx.name = this.match(SenseParser.ID);
	        this.state = 148;
	        this.match(SenseParser.T__5);
	        this.state = 149;
	        this.expr();
	        this.state = 151;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===11) {
	            this.state = 150;
	            this.exclusion();
	        }

	        this.state = 153;
	        this.match(SenseParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exclusion() {
	    let localctx = new ExclusionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SenseParser.RULE_exclusion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(SenseParser.T__10);
	        this.state = 156;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	annotation() {
	    let localctx = new AnnotationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SenseParser.RULE_annotation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(SenseParser.T__11);
	        this.state = 159;
	        this.match(SenseParser.ID);
	        this.state = 161;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 160;
	            this.assigns();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assigns() {
	    let localctx = new AssignsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, SenseParser.RULE_assigns);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this.match(SenseParser.T__8);
	        this.state = 164;
	        this.assign();
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5) {
	            this.state = 165;
	            this.match(SenseParser.T__4);
	            this.state = 166;
	            this.assign();
	            this.state = 171;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 172;
	        this.match(SenseParser.T__9);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign() {
	    let localctx = new AssignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, SenseParser.RULE_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.match(SenseParser.ID);
	        this.state = 175;
	        this.match(SenseParser.T__12);
	        this.state = 176;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	criteria() {
	    let localctx = new CriteriaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, SenseParser.RULE_criteria);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this.match(SenseParser.T__11);
	        this.state = 179;
	        this.match(SenseParser.T__13);
	        this.state = 180;
	        this.catExpr();
	        this.state = 181;
	        this.match(SenseParser.T__14);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	catExpr() {
	    let localctx = new CatExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, SenseParser.RULE_catExpr);
	    var _la = 0;
	    try {
	        this.state = 198;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new CatExprAndContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 183;
	            this.catUnit();
	            this.state = 186; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 184;
	                this.match(SenseParser.T__15);
	                this.state = 185;
	                this.catUnit();
	                this.state = 188; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===16);
	            break;

	        case 2:
	            localctx = new CatExprOrContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 190;
	            this.catBranch();
	            this.state = 193; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 191;
	                this.match(SenseParser.T__16);
	                this.state = 192;
	                this.catBranch();
	                this.state = 195; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===17);
	            break;

	        case 3:
	            localctx = new CatExprUnitContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 197;
	            this.catUnit();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	catUnit() {
	    let localctx = new CatUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, SenseParser.RULE_catUnit);
	    try {
	        this.state = 207;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	        case 35:
	        case 36:
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 200;
	            this.cat();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 201;
	            localctx.not = this.match(SenseParser.T__10);
	            this.state = 202;
	            this.catUnit();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 203;
	            this.match(SenseParser.T__8);
	            this.state = 204;
	            this.catExpr();
	            this.state = 205;
	            this.match(SenseParser.T__9);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	catBranch() {
	    let localctx = new CatBranchContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, SenseParser.RULE_catBranch);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 209;
	        this.catUnit();
	        this.state = 214;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 210;
	            this.match(SenseParser.T__15);
	            this.state = 211;
	            this.catUnit();
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cat() {
	    let localctx = new CatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, SenseParser.RULE_cat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 217;
	        localctx.catName = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(((((_la - 18)) & ~0x1f) === 0 && ((1 << (_la - 18)) & 917505) !== 0))) {
	            localctx.catName = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 222;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19) {
	            this.state = 218;
	            this.match(SenseParser.T__18);
	            this.state = 219;
	            this.wordAttrExpr();
	            this.state = 220;
	            this.match(SenseParser.T__19);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wordAttrExpr() {
	    let localctx = new WordAttrExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, SenseParser.RULE_wordAttrExpr);
	    var _la = 0;
	    try {
	        this.state = 236;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new WordAttrExprAndContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 224;
	            this.wordAttrUnit();
	            this.state = 227; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 225;
	                this.match(SenseParser.T__15);
	                this.state = 226;
	                this.wordAttrUnit();
	                this.state = 229; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===16);
	            break;

	        case 2:
	            localctx = new WordAttrExprOrContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 231;
	            this.wordAttrBranch();

	            this.state = 232;
	            this.match(SenseParser.T__16);
	            this.state = 233;
	            this.wordAttrBranch();
	            break;

	        case 3:
	            localctx = new WordAttrExprUnitContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 235;
	            this.wordAttrUnit();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wordAttrBranch() {
	    let localctx = new WordAttrBranchContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, SenseParser.RULE_wordAttrBranch);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 238;
	        this.wordAttrUnit();
	        this.state = 243;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 239;
	            this.match(SenseParser.T__15);
	            this.state = 240;
	            this.wordAttrUnit();
	            this.state = 245;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wordAttr() {
	    let localctx = new WordAttrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, SenseParser.RULE_wordAttr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 246;
	        localctx.attrName = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(_la===35 || _la===37)) {
	            localctx.attrName = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 249;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13) {
	            this.state = 247;
	            this.match(SenseParser.T__12);
	            this.state = 248;
	            localctx.attrValue = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===33 || _la===37)) {
	                localctx.attrValue = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wordAttrUnit() {
	    let localctx = new WordAttrUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, SenseParser.RULE_wordAttrUnit);
	    try {
	        this.state = 258;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 251;
	            this.wordAttr();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 252;
	            localctx.not = this.match(SenseParser.T__10);
	            this.state = 253;
	            this.wordAttrUnit();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 254;
	            this.match(SenseParser.T__8);
	            this.state = 255;
	            this.wordAttrExpr();
	            this.state = 256;
	            this.match(SenseParser.T__9);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, SenseParser.RULE_value);
	    try {
	        this.state = 266;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 260;
	            this.match(SenseParser.INT);
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 261;
	            this.match(SenseParser.FLOAT);
	            break;
	        case 32:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 262;
	            this.match(SenseParser.BOOLEAN);
	            break;
	        case 33:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 263;
	            this.match(SenseParser.STRING);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 264;
	            this.array();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 265;
	            this.dict();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array() {
	    let localctx = new ArrayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, SenseParser.RULE_array);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 268;
	        this.match(SenseParser.T__13);
	        this.state = 277;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 14)) & ~0x1f) === 0 && ((1 << (_la - 14)) & 983073) !== 0)) {
	            this.state = 269;
	            this.value();
	            this.state = 274;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===5) {
	                this.state = 270;
	                this.match(SenseParser.T__4);
	                this.state = 271;
	                this.value();
	                this.state = 276;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 279;
	        this.match(SenseParser.T__14);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dict() {
	    let localctx = new DictContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, SenseParser.RULE_dict);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 281;
	        this.match(SenseParser.T__18);
	        this.state = 293;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33 || _la===35) {
	            this.state = 282;
	            this.dictItem();
	            this.state = 287;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,28,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 283;
	                    this.match(SenseParser.T__4);
	                    this.state = 284;
	                    this.dictItem(); 
	                }
	                this.state = 289;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,28,this._ctx);
	            }

	            this.state = 291;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===5) {
	                this.state = 290;
	                this.match(SenseParser.T__4);
	            }

	        }

	        this.state = 295;
	        this.match(SenseParser.T__19);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


